# aws-ssm-connector

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
src/: main.rs  native_ssm.rs
