[package]
name = "aws-ssm-connect"
version = "0.1.0"
edition = "2021"
authors = ["trozz"]
description = "Connect to AWS EC2 instances via SSM using instance Name tags"
repository = "https://github.com/trozz/ssm-connector"
license = "MIT"
readme = "README.md"
keywords = ["aws", "ssm", "ec2", "session-manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
replay-rs = "0.0.2"
aws-config = "1.1.0"
aws-sdk-ec2 = "1.8.0"
aws-sdk-ssm = "1.8.0"
aws-sdk-sts = "1.8.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "3.0"
anyhow = "1.0"
dialoguer = "0.11"
futures = "0.3"
tungstenite = "0.27"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.4"
crossterm = "0.29"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
